@@ -10,6 +10,7 @@ x.x:
 - fixed: wrong link in blog widget when used in groups
 - fixed: depricated notice in blog save action
 - fixed: index_blog widget slider mode
+- fixed: index_blog widget preview mode
 
 2.2 (2012-03-02):
 
